# Gemini-Telegram-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_en.md  bundestag.py  config.py  docker-compose.yml  gemini.py  handlers.py  main.py  pyproject.toml  requirements.txt  utils.py
