[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-starter"
version = "0.1.0"
description = "Clean starter scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Project Maintainers" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
